--- a/templates/monitoring/monitoring_view.html
+++ b/templates/monitoring/monitoring_view.html
@@ -30,6 +30,7 @@
     <table class="table table-hover align-middle" id="admin-monitoring-table">
       <thead>
         <tr>
+          <th>Puesto</th>
           <th>Departamento</th>
           <th>Nombre</th>
           <th>Usuario</th>
@@ -42,6 +43,7 @@
       <tbody>
         {% for row in rows %}
         <tr>
+          <td>{{ row.position }}
           <td>{{ row.department }}</td>
           <td>{{ row.nombre }}</td>
           <td>{{ row.username }}</td>
